+ inheritance persistence/fetching + node type verification against updates/fetching
git-svn-id: https://svn.apache.org/repos/asf/incubator/graffito/trunk/jcr/jcr-mapping@377917 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,11 @@
+20060215
+support for persisting/fetching inheritance
+
 20060214
 basic support for inheritance
 
 = TODO =
++ Add tests for persistence/fetching of inheritting objects
 + Add exception tests
 + Review query/filters
 
